--- a/style.css
+++ b/style.css
@@ -24,6 +24,9 @@
     --bg-error: #F03E3E;
     --tt-error: white;
 }
+.hide{
+    display: none;
+}
 
 body {
     background-color: #040924;
@@ -83,6 +86,14 @@ form input:focus{
 form input:placeholder{
     color: var(--tt-placeholder);
 }
+button{
+    border-style: none;
+    background-color: #fff;
+   
+    cursor: pointer;
+
+    transition: .3s;
+}
 form button{
     display: flex;
     gap: .8rem;
@@ -93,15 +104,46 @@ form button{
     padding: 1.6rem;
     margin-top: 3.2rem;
 
-    border-style: none;
     border-radius: .4rem;
 
     background-color: var(--bg-button);
     color: var(--tt-button);
-
-    cursor: pointer;
-    transition: .3s;
 }
-button:hover{
+form button:hover{
     background-color: var(--bg-button-hover);
+}
+
+.modal-weapper{
+    background: rgba(0, 0, 0, 0.70);
+
+    position: absolute;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    right: 0;
+    /*ou inset:0 */
+
+    display: grid;
+    place-content: center;
+
+    opacity: 0;
+    visibility: hidden;
+}
+.modal-weapper.open{
+    opacity: 1;
+    visibility: visible;
+}
+.modal{
+   position: relative;
+    align-items: center;
+}
+.modal button{
+    position: absolute;
+    top: 1.6rem;
+    right: 1.6rem;
+
+    margin-inline: auto;
+}
+.modal button:hover{
+    transform:scale(1.1)
 }
