--- a/style.css
+++ b/style.css
@@ -147,3 +147,21 @@ form button:hover{
 .modal button:hover{
     transform:scale(1.1)
 }
+
+/*Alert Error*/
+
+.alert-error{
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+
+    padding: .8rem;
+    background: var(--bg-error);
+    text-align: center;
+    color: (--tt-error);
+    font-weight: 700;
+
+    visibility: hidden;
+    opacity: 0;
+}
