--- a/style.css
+++ b/style.css
@@ -1,124 +1,134 @@
 * {
     margin: 0;
     padding: 0;
-    box-sizing: border-box
+    box-sizing: border-box;
 }
 
 :root {
     font-size: 62.5%;
 
-    /*Cores*/
+    /* cores */
     --tt-heading: #0C3440;
-
+    
     --tt-label: #00453A;
     --tt-input: #212529;
     --ot-input: #02799D;
     --bd-input: rgba(73, 80, 87, 0.3);
-    --bg-input: #DCE2E9;
     --tt-placeholder: rgba(73, 80, 87, 0.5);
+    --bg-input: #DCE2E9;
 
     --tt-button: white;
     --bg-button: #02799D;
-    --bg-button-hover: #016d8e;
+    --bg-button-hover: #01475c;
 
     --bg-error: #F03E3E;
     --tt-error: white;
-}
+}   
 
 body {
-    background-color: #040924;
-
     font-family: 'Roboto', sans-serif;
+    background-color: #040924;
 }
 
-body, input, button{
+body, input, button {
     font-size: 1.6rem;
     line-height: 2rem;
 }
 
 .container {
-    display: grid;
     height: 100vh;
+    display: grid;
     place-content: center;
 }
 
 .card {
     padding: 4.8rem 6.4rem 6.4rem;
-    background-color: #fff;
-    border-radius: .6rem;
-    box-shadow: 0 .2rem .4rem 0 rgba(0, 0, 0, 0.10);
-
+    background: white;
     max-width: 42.8rem;
     margin-inline: auto;
+
+    box-shadow: 0 .2rem .4rem rgba(0,0,0,0.1);
+    border-radius: .6rem;
 }
 
 .title {
-    color: var(--tt-heading);
     font-size: 3.2rem;
-    line-height: 4.0rem;
+    line-height: 4rem;
+    color: var(--tt-heading);
 }
+
+form  {
+    width: 30rem;
+}
+
 form h1 {
     margin-bottom: 3.2rem;
 }
-form label{
-    color: var(--tt-label);
+
+form label {
     font-size: 1.4rem;
     line-height: 1.8rem;
+    color: var(--tt-label);
     margin-bottom: .8rem;
     display: block;
 }
-form input{
+
+form input {
     width: 100%;
-    border-radius: .4rem;
     border: 1px solid var(--bd-input);
     background: var(--bg-input);
     padding: 1.6rem;
+    border-radius: .4rem;
 }
-.input-wrapper + .input-wrapper{
-    margin-top: 1.6rem;
-}
-form input:focus{
+
+form input:focus {
     outline: 2px solid var(--ot-input);
 }
-form input:placeholder{
+
+form input::placeholder {
     color: var(--tt-placeholder);
 }
-button{
-    border-style: none;
-    background-color: #fff;
-   
-    cursor: pointer;
 
-    transition: .3s;
+.input-wrapper + .input-wrapper {
+    margin-top: 1.6rem;
 }
-form button{
-    display: flex;
-    gap: .8rem;
-    justify-content: center;
-    align-items: center;
 
-    width: 100%;
-    padding: 1.6rem;
+form button {
     margin-top: 3.2rem;
+    padding: 1.6rem;
+    width: 100%;
 
     border-radius: .4rem;
-
+    border: none;
     background-color: var(--bg-button);
     color: var(--tt-button);
-}
-form button:hover{
-    background-color: var(--bg-button-hover);
+
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: .8rem;
+
+    font-weight: bold;
+
+    cursor: pointer;
+
+    transition: background .3s;
 }
 
-.modal-weapper{
-    background: rgba(0, 0, 0, 0.70);
+form button:hover {
+    background: var(--bg-button-hover);
+}
 
+/* modal */
+.modal-wrapper.open {
+    opacity: 1;
+    visibility: visible;
+}
+
+.modal-wrapper {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 0;
-    /*ou inset:0 */
+    inset: 0;
+    background: rgba(0, 0, 0, 0.7);
 
     display: grid;
     place-content: center;
@@ -126,47 +136,48 @@ form button:hover{
     opacity: 0;
     visibility: hidden;
 }
-.modal-weapper.open{
-    opacity: 1;
-    visibility: visible;
+
+.modal {
+    position: relative;
 }
-.modal{
-   position: relative;
-    align-items: center;
-}
-.modal button{
+
+.modal button {
+    background: none;
+    border: none;
+
     position: absolute;
     top: 1.6rem;
     right: 1.6rem;
 
-    margin-inline: auto;
-}
-.modal button:hover{
-    transform:scale(1.1)
+    cursor: pointer;
+
+    transition: transform .3s;
 }
 
-/*Alert Error*/
+.modal button:hover {
+    transform: scale(1.1);
+}
 
-.alert-error{
+/* alert error */
+.alert-error.open {
+    visibility: visible;
+    opacity: 1;
+    transform: translateY(0);
+}
+
+.alert-error {
     position: absolute;
+    background-color: var(--bg-error);
     top: 0;
     left: 0;
     right: 0;
-
-    padding: .8rem;
-    background: var(--bg-error);
     text-align: center;
     color: var(--tt-error);
-    font-weight: 700;
+    padding: .8rem 0;
+    font-weight: bold;
 
     visibility: hidden;
+    opacity: 0;
     transform: translateY(-30px);
     transition: transform .5s;
-    opacity: 0;
-}
-
-.alert-error.open{
-    opacity: 1;
-    visibility: visible;
-    transform: translateY(0);
 }
